// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`find-tasks tool container filtering should find tasks in label 1`] = `
"Tasks with label "@work": 1 (limit 10).
Filter: with label "@work".
Preview:
    Work task • P1 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks"
`;

exports[`find-tasks tool container filtering should find tasks in parent task 1`] = `
"Subtasks: 1 (limit 10).
Filter: subtasks of 8485093748.
Preview:
    Subtask • P1 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks"
`;

exports[`find-tasks tool container filtering should find tasks in project 1`] = `
"Tasks in project: 1 (limit 10).
Filter: in project 6cfCcrrCFg2xP94Q.
Preview:
    Project task • P1 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks"
`;

exports[`find-tasks tool container filtering should find tasks in section 1`] = `
"Tasks in section: 1 (limit 10).
Filter: in section section-123.
Preview:
    Section task • P1 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks"
`;

exports[`find-tasks tool container filtering should handle combined label and container filtering 1`] = `
"Tasks in project with label "@work": 2 (limit 10).
Filter: in project 6cfCcrrCFg2xP94Q; with label "@work".
Preview:
    project work task • P1 • id=8485093751
    project personal task • P1 • id=8485093752
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks"
`;

exports[`find-tasks tool container filtering should handle empty label results 1`] = `
"Tasks with label "@nonexistent": 0 (limit 10).
Filter: with label "@nonexistent".
No results. No tasks with label were found."
`;

exports[`find-tasks tool container filtering should handle empty label with search text results 1`] = `
"Search results for "nonexistent" filtered by label "@work": 0 (limit 10).
Filter: matching "nonexistent"; filtered by label "@work".
No results. Try broader search terms; Check completed tasks with find-completed-tasks; Verify spelling and try partial words."
`;

exports[`find-tasks tool container filtering should handle label with search text filtering 1`] = `
"Search results for "meeting" filtered by label "@work": 1 (limit 10).
Filter: matching "meeting"; filtered by label "@work".
Preview:
    important work meeting • P1 • id=8485093753
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks"
`;

exports[`find-tasks tool next steps logic should provide different next steps for regular tasks 1`] = `
"Search results for "future tasks": 1 (limit 10).
Filter: matching "future tasks".
Preview:
    Regular future task • due 2025-08-25 • P1 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track"
`;

exports[`find-tasks tool next steps logic should provide helpful suggestions for empty search results 1`] = `
"Search results for "nonexistent": 0 (limit 10).
Filter: matching "nonexistent".
No results. Try broader search terms; Check completed tasks with find-completed-tasks; Verify spelling and try partial words."
`;

exports[`find-tasks tool next steps logic should suggest different actions when hasOverdue is true 1`] = `
"Search results for "overdue tasks": 1 (limit 10).
Filter: matching "overdue tasks".
Preview:
    Overdue search result • due 2025-08-10 • P1 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track"
`;

exports[`find-tasks tool next steps logic should suggest today tasks when hasToday is true 1`] = `
"Search results for "today tasks": 1 (limit 10).
Filter: matching "today tasks".
Preview:
    Task due today • due 2025-08-17 • P1 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track"
`;

exports[`find-tasks tool searching tasks should handle custom limit 1`] = `
"Search results for "project update": 1 (limit 5).
Filter: matching "project update".
Preview:
    Test result • P1 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks"
`;

exports[`find-tasks tool searching tasks should handle pagination cursor 1`] = `
"Search results for "follow up": 1 (limit 20).
Filter: matching "follow up".
Preview:
    Test result • P1 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks"
`;

exports[`find-tasks tool searching tasks should handle search with empty results 1`] = `
"Search results for "nonexistent keyword": 0 (limit 10).
Filter: matching "nonexistent keyword".
No results. Try broader search terms; Check completed tasks with find-completed-tasks; Verify spelling and try partial words."
`;

exports[`find-tasks tool searching tasks should handle search with special characters 1`] = `
"Search results for "@work #urgent "exact phrase"": 0 (limit 10).
Filter: matching "@work #urgent "exact phrase"".
No results. Try broader search terms; Check completed tasks with find-completed-tasks; Verify spelling and try partial words."
`;

exports[`find-tasks tool searching tasks should search tasks and return results 1`] = `
"Search results for "important meeting": 2 (limit 10), more available.
Filter: matching "important meeting".
Preview:
    Task containing search term • P1 • id=8485093748
    Another matching task • P2 • id=8485093749
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Pass cursor 'cursor-for-next-page' to fetch more results."
`;

exports[`find-tasks tool text search with label filtering should handle text search with label parameter 1`] = `
"Search results for "meeting" filtered by label "@work": 1 (limit 10).
Filter: matching "meeting"; filtered by label "@work".
Preview:
    Important work meeting • P1 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks"
`;
